fixed overlapping feild with nav bar in create listing

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,10 @@ h1 {
 h2 {
   font-size: 20px;
 }
+/* 
+.section {
+  z-index: 0;
+} */
 
 /*  */
 /* FLEXBOX */
@@ -131,6 +135,7 @@ h2 {
   top: 0%;
   width: 100%;
   background-color: white;
+  z-index: 9999;
 }
 
 .topnav.navbar {
